Add trigger of notifications
