# internal/notificationer/handler/internal/validator/request_validator.go
@@ -16,19 +16,19 @@ import (
 // + If via is 'mail', the notification must contain the email of the user
 // + If via is 'both', the notification must contain the email and telegramId of the user
 func ValidateNotificationRequest(notification domain.NotificationRequest) error {
-	currentTime := time.Now()
+	//currentTime := time.Now()
 
 	if len(notification.Message) < 5 {
 		return fmt.Errorf("%w: must be of length at least 5", errInvalidMessage)
 	}
 
-	if notification.StartDate.Before(currentTime) {
-		return fmt.Errorf("%w: date from the past", errInvalidStartDate)
-	}
-
-	if notification.EndDate != nil && notification.EndDate.Before(currentTime) {
-		return fmt.Errorf("%w: date from the past", errInvalidEndDate)
-	}
+	//if notification.StartDate.Before(currentTime) {
+	//	return fmt.Errorf("%w: date from the past", errInvalidStartDate)
+	//}
+	//
+	//if notification.EndDate != nil && notification.EndDate.Before(currentTime) {
+	//	return fmt.Errorf("%w: date from the past", errInvalidEndDate)
+	//}
 
 	hoursSet := make(map[string]bool)
 	for _, hour := range notification.Hours {
